--- a/templates/stackedbar19/index.html
+++ b/templates/stackedbar19/index.html
@@ -129,7 +129,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: '2014 - 2019'
+              labelString: 'Youngest, Oldest, and All Employees by Race'
             }
           }]
         },
