--- a/templates/stackedbar20/index.html
+++ b/templates/stackedbar20/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Employee Racial Breakdown by Age </title>
+  <title>Female Employee Racial Breakdown by Age and Gender</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <canvas id ="chart" width="800" height="400"></canvas>
+  <canvas id ="chart" width="800" height="800"></canvas>
   <script>
   //CHART JS
   Chart.defaults.global.legend.labels.usePointStyle = true;
@@ -129,7 +129,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Youngest, Oldest, and All Employees by Race'
+              labelString: 'Female Employees'
             }
           }]
         },
@@ -158,7 +158,7 @@
     const y5 = [];
     const y6 = [];
 
-    const response = await fetch('Race_Breakdown_for_Employees_Aged_Less_than_30_60_and_Over_Compared_to_All_Ages.csv');
+    const response = await fetch('Employee_Racial_Breakdown_by_Age_and_Gender.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
