update border colors

--- a/templates/bar36/index.html
+++ b/templates/bar36/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <canvas id ="chart" width="800" height="400"></canvas>
+  <canvas id ="chart" width="800" height="300"></canvas>
   <script>
   //CHART JS
   Chart.defaults.global.legend.display = false,
@@ -33,7 +33,7 @@
           data: data.ys,
           fill: false,
           backgroundColor: '#A83226',
-          borderColor: '#CACACA',
+      //    borderColor: '#CACACA',
           borderWidth: 1,
           lineTension: 4,
           hoverBackgroundColor: '#E6E6E6',
