--- a/templates/bar39/index.html
+++ b/templates/bar39/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Length of Service Distribution for Men</title>
+  <title>Employee Pay by Gender: Men</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -46,7 +46,7 @@
         cornerRadius: 20,
         title:{
           display: false,
-          text: 'Length of Service Distribution for Men'
+          text: 'Employee Pay by Gender: Men'
         },
         scales: {
           xAxes: [{
@@ -62,7 +62,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Men: Length of Service (Years)'
+              labelString: 'Men: Base Salary ($)'
             }
           }],
           yAxes: [{
@@ -79,14 +79,14 @@
             },
             scaleLabel: {
               display: false,
-              labelString: 'Percent of Total Employees that are men'
+              labelString: 'Percent of Total Employees that are Men'
             }
           }]
         },
         tooltips: {
           callbacks: {
             title: function(tooltipItems, data) {
-            return 'Length of Service (Years): '+ tooltipItems[0].xLabel;
+            return 'Base Salary: $'+ tooltipItems[0].xLabel.toLocaleString('en-US');
           },
             label: function(tooltipItem, data) {
               return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+'%';
@@ -106,14 +106,14 @@
     const xs = [];
     const ys = [];
 
-    const response = await fetch('men_experience_data.csv');
+    const response = await fetch('gender_pay_histogram_men.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
     table.forEach(row => {
       const columns = row.split(',');
       const one = columns[0];
-      xs.push(one);
+      xs.push(parseFloat(one));
       const two = columns[1];
       ys.push(parseFloat(two)); //make data from string to number and added mean payers of 14 degrees
       console.log(one, two);
