--- a/templates/boxplot04/index.html
+++ b/templates/boxplot04/index.html
@@ -12,10 +12,10 @@
   <canvas id="canvas"></canvas>
 </div>
 <!-- partial -->
-  <script src="https://unpkg.com/chart.js@3.0.0/dist/chart.js"></script>
-<script src='https://unpkg.com/@sgratzl/chartjs-chart-boxplot'></script><script  src="./script.js"></script>
-<!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
-    <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
-  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>
+<script src="https://unpkg.com/chart.js@3.0.0/dist/chart.js"></script>
+<script src='https://unpkg.com/@sgratzl/chartjs-chart-boxplot'></script>
+<script  src="./script.js"></script>
+<script src="https://unpkg.com/d3-random@latest/dist/d3-random.min.js"></script>
+
 </body>
 </html>
