--- a/templates/scatter5/index.html
+++ b/templates/scatter5/index.html
@@ -12,9 +12,9 @@
   <canvas id="chart" width=auto max-height="400"></canvas>
   <script>
 
-  Chart.defaults.global.responsive = true
+  /*Chart.defaults.global.responsive = true
   Chart.defaults.global.maintainAspectRatio = true
-  Chart.defaults.global.legend = false
+  Chart.defaults.global.legend = false*/
 
   chartIt()
   .then(response => {
