--- a/templates/boxplot07/index.html
+++ b/templates/boxplot07/index.html
@@ -12,7 +12,7 @@
   <canvas id="canvas"></canvas>
 </div>
 <!-- partial -->
-  <script src="https://unpkg.com/chart.js@3.0.0/dist/chart.js"></script>
+  <script src="https://unpkg.com/chart.js@2.9.1"></script>
 <script src='https://unpkg.com/@sgratzl/chartjs-chart-boxplot'></script><script  src="./script.js"></script>
 
 </body>
