--- a/templates/linechartmulti35/index.html
+++ b/templates/linechartmulti35/index.html
@@ -34,7 +34,7 @@ Chart.defaults.global.title.display = true
           fill: false,
           lineTension: 0.5,
           backgroundColor:"#2F56A6",
-          borderColor: "#A83226",
+          borderColor: "#666666",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
