--- a/templates/linechartmulti36/index.html
+++ b/templates/linechartmulti36/index.html
@@ -116,7 +116,7 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
               display: true,
-              labelString: 'Age (Years)'
+              labelString: 'Length of Service (Years)'
             }
         }]
       },
