--- a/templates/stackedbar22/index.html
+++ b/templates/stackedbar22/index.html
@@ -33,7 +33,7 @@
             label: 'Women',
             data: data.ys,
             fill: false,
-            backgroundColor: '#803181',
+            backgroundColor: '#A83226',
             //borderColor: '#803181',
             borderWidth: 1,
             lineTension: 4,
@@ -44,7 +44,7 @@
             label: 'Men',
             data: data.y2,
             fill: false,
-            backgroundColor: '#0C4635',
+            backgroundColor: '#23417D',
           //  borderColor: '#434343',
             borderWidth: 1,
             lineTension: 4,
