--- a/templates/stackedbar22/index.html
+++ b/templates/stackedbar22/index.html
@@ -68,8 +68,8 @@
               display: true
             },
             scaleLabel: {
-              display: false,
-              labelString: 'Employees'
+              display: true,
+              labelString: 'Median Salary'
             }
           }],
           xAxes: [{
