--- a/templates/stackedbar24/index.html
+++ b/templates/stackedbar24/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>NYPD Salaries by Gender Composition</title>
+  <title>DOITT Salaries by Gender Composition</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -57,7 +57,7 @@
         cornerRadius: 20,
         title: {
           display: false,
-          text: 'NYPD Job Titles by Median Salary',
+          text: 'DOITT Job Titles by Median Salary',
           position: 'bottom'
         },
         scales: {
@@ -95,7 +95,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'NYPD Job Titles by Median Salary'
+              labelString: 'DOITT Job Titles by Median Salary'
             }
           }]
         },
@@ -121,7 +121,7 @@
     const y2 = [];
 
 
-    const response = await fetch('NYPD_case_study_data.csv');
+    const response = await fetch('doitt_case_study_data.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
