--- a/templates/bargrouped09/index.html
+++ b/templates/bargrouped09/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Non-Adjusted Pay Gap by Race/Ethnicity and Gender</title>
+  <title>Non-Adjusted Pay Gap by Race/Ethnicity and Gender, Average Cents on the Dollar Earned</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -87,7 +87,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Median Salary'
+              labelString: 'Average Cents on the Dollar Earned'
             }
           }]
         },
@@ -120,9 +120,9 @@
       const columns = row.split(',');
       const one = columns[0];
       xs.push(one);
-      const two = columns[1];
+      const two = columns[3];
       ys.push(parseFloat(two)); //make data from string to number
-      const three = columns[2];
+      const three = columns[4];
       ys2.push(parseFloat(three)); //make data from string to number
       console.log(one, two, three);
     });
