--- a/templates/bargrouped13/index.html
+++ b/templates/bargrouped13/index.html
@@ -134,7 +134,7 @@
         tooltips: {
           callbacks: {
             label: function(tooltipItem, data) {
-              return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+' Employees';
+              return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+'%';
             },
           },
           backgroundColor: '#434343',
