--- a/templates/bargrouped17/index.html
+++ b/templates/bargrouped17/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Part-Time vs Full-Time by Race/Ethnicity</title>
+  <title>Uniformed vs Non-Uniformed Employees by Race/Ethnicity</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -127,7 +127,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Part-Time vs Full-Time by Race/Ethnicity'
+              labelString: 'Uniformed vs Non-Uniformed Employees by Race/Ethnicity'
             }
           }]
         },
@@ -155,7 +155,7 @@
     const ys5 = [];
     const ys6 = [];
 
-    const response = await fetch('PT_Ethnicity-PT_Agencies.csv');
+    const response = await fetch('uniformed_race.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
