--- a/templates/bar46/index.html
+++ b/templates/bar46/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Lowest Paying Agencies by Median Hourly Pay</title>
+  <title>Lowest Paying Titles by Median Hourly Pay</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -33,7 +33,7 @@
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Lowest Paying Agencies by Median Hourly Pay',
+          label: 'Lowest Paying Titles by Median Hourly Pay  ',
           data: data.ys,
           fill: false,
           backgroundColor: '#2F56A6',
@@ -50,7 +50,7 @@
         title:{
           display: false,
           position: 'bottom',
-          text: 'Lowest Paying Agencies by Median Hourly Pay'
+          text: 'Lowest Paying Titles by Median Hourly Pay'
         },
         scales: {
           xAxes: [{
@@ -65,8 +65,8 @@
               display: false
             },
             scaleLabel: {
-              display: true,
-              labelString: 'Agencies Part-Time Employees'
+              display: false,
+              labelString: 'Lowest Paying Titles'
             }
           }],
           yAxes: [{
@@ -74,8 +74,8 @@
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
-                //beginAtZero: false,
-                min:13
+                beginAtZero: true,
+                //min:13
             },
             gridLines: {
               display: true
@@ -111,7 +111,7 @@
   async function getData() {
 
 
-    const response = await fetch('PT_Highest_Agencies.csv');
+    const response = await fetch('PT_Lowest_Titles.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
