--- a/templates/bargrouped23/index.html
+++ b/templates/bargrouped23/index.html
@@ -63,7 +63,7 @@
           yAxes: [{
             ticks: {
               callback: function(value, index, values) {
-                return value.toLocaleString('en-US')+'%';
+                return value.toLocaleString('en-US');
               },
               beginAtZero: true,
             },
