--- a/templates/bargrouped23/index.html
+++ b/templates/bargrouped23/index.html
@@ -87,7 +87,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Salary ($)'
+              labelString: 'Salary ($000s)'
             }
           }]
         },
