--- a/templates/bargrouped25/index.html
+++ b/templates/bargrouped25/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Race/Ethnicity Breakdown for Highest Paying Civil Service Titles</title>
+  <title>Race/Ethnicity Breakdown for Lowest Paying Civil Service Titles</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -129,7 +129,7 @@
             },
             scaleLabel: {
               display: false,
-              labelString: 'Race/Ethnicity Breakdown for Highest Paying Civil Service Titles'
+              labelString: 'Race/Ethnicity Breakdown for Lowest Paying Civil Service Titles'
             }
           }]
         },
@@ -157,7 +157,7 @@
     const ys5 = [];
     const ys6 = [];
 
-    const response = await fetch('PT_Highest_Titles_Eth.csv');
+    const response = await fetch('PT_Lowest_Titles_Eth.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
