--- a/templates/boxplot08/index.html
+++ b/templates/boxplot08/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <title>Uniformed Agencies vs Non-Uniformed Agencies Base Salary Summary</title>
   <link rel="stylesheet" href="./style.css">
   <script src='https://unpkg.com/chart.js@3'></script>
@@ -99,7 +101,7 @@
 const options = {
         responsive: true,
         legend: {
-          position: 'top',
+          position: 'bottom',
         },
         title: {
           display: true,
