--- a/templates/boxplot09/index.html
+++ b/templates/boxplot09/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Uniformed Agencies vs Non-Uniformed Agencies Base Salary Summary</title>
+  <title>Gender and Salary of Uniformed vs Non-Uniformed Agencies</title>
   <link rel="stylesheet" href="./style.css">
   <script src='https://unpkg.com/chart.js@3'></script>
 <script src='https://unpkg.com/@sgratzl/chartjs-chart-boxplot@3'></script><script  src="./script.js"></script>
@@ -24,22 +24,22 @@
     const values = randomValues(5, min, max).sort((a, b) => a - b);
 
     return {
-      min: 43042,
-      q1: 48371,
+      min: 32520,
+      q1: 52170,
       median: 85292,
       q3: 85292,
-      max: 229449
+      max: 233506
     };
   }
   function randomBoxPlot2(min, max) {
     const values = randomValues(5, min, max).sort((a, b) => a - b);
 
     return {
-      min: 37630,
-      q1: 50173,
-      median: 77318,
-      q3: 77318,
-      max: 233829
+      min: 27446,
+      q1: 46355,
+      median: 56977,
+      q3: 72903,
+      max: 236750
     };
   }
   function randomBoxPlot3(min, max) {
@@ -47,9 +47,9 @@
 
     return {
       min: 32520,
-      q1: 50604,
+      q1: 55192,
       median: 85292,
-      q3: 85292,
+      q3: 88945,
       max: 235139
     };
   }
@@ -69,10 +69,10 @@
 
     return {
       min: 27186,
-      q1: 46737,
-      median: 60248,
-      q3: 79936,
-      max: 236750
+      q1: 48345,
+      median: 67173,
+      q3: 91228,
+      max: 235526
     };
   }
 
@@ -81,7 +81,7 @@
     labels: ['Uniformed','Non-Uniformed'],
   datasets: [{
     label: 'Female',
-    backgroundColor: '#2F56A6',
+    backgroundColor: '#A83226',
     borderColor: '#222222',
     borderWidth: 1,
     padding: 10,
@@ -94,7 +94,7 @@
   },
   {
     label: 'Male',
-    backgroundColor:'#666666',
+    backgroundColor:'#23417D',
     borderColor: '#222222',
     borderWidth: 1,
     padding: 10,
@@ -127,10 +127,10 @@ const options = {
         },
         plugins: {
             legend: {
-                display: false,
-                labels: {
+                display: true,
+              /*  labels: {
                     color: 'rgb(255, 99, 132)'
-                }
+                }*/
             }
           }
       };
