--- a/templates/barhorizontal36/index.html
+++ b/templates/barhorizontal36/index.html
@@ -80,7 +80,7 @@
         tooltips: {
           callbacks: {
             label: function(tooltipItem, data) {
-              return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ '%';
+              return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ 'Employees';
             },
           },
           backgroundColor: '#434343',
