--- a/templates/bargrouped36/index.html
+++ b/templates/bargrouped36/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Title Rank by Race for the Police Service Occupation Group</title>
+  <title>Title Rank by Race for the Sanitation Service Occupation Group</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -129,7 +129,7 @@
             },
             scaleLabel: {
               display: false,
-              labelString: 'Title Rank by Race for the Police Service Occupation Group'
+              labelString: 'Title Rank by Race for the Sanitation Service Occupation Group'
             }
           }]
         },
