--- a/templates/stackedbar22/index.html
+++ b/templates/stackedbar22/index.html
@@ -30,7 +30,7 @@
         labels: data.xs,
         datasets: [
           {
-            label: 'Women',
+            label: 'Female',
             data: data.ys,
             fill: false,
             backgroundColor: '#A83226',
@@ -41,7 +41,7 @@
             barPercentage: .8
           },
           {
-            label: 'Men',
+            label: 'Male',
             data: data.y2,
             fill: false,
             backgroundColor: '#23417D',
