--- a/templates/stackedbar23/index.html
+++ b/templates/stackedbar23/index.html
@@ -30,7 +30,7 @@
         labels: data.xs,
         datasets: [
           {
-            label: 'Women',
+            label: 'Female',
             data: data.ys,
             fill: false,
             backgroundColor: '#A83226',
@@ -41,7 +41,7 @@
             barPercentage: .8
           },
           {
-            label: 'Men',
+            label: 'Male',
             data: data.y2,
             fill: false,
             backgroundColor: '#23417D',
@@ -121,7 +121,7 @@
     const y2 = [];
 
 
-    const response = await fetch('NYPD_case_study_data.csv');
+    const response = await fetch('nypd_case_study_data.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
