--- a/templates/bar41/index.html
+++ b/templates/bar41/index.html
@@ -80,8 +80,8 @@
               display: true
             },
             scaleLabel: {
-              display: false,
-              labelString: 'Percent of Employees'
+              display: true,
+              labelString: 'Percent of Civil Service Titles'
             }
           }]
         },
