--- a/templates/bargrouped36/index.html
+++ b/templates/bargrouped36/index.html
@@ -43,7 +43,7 @@
           },
 
           {
-            label: 'Hispanic or Latinx',
+            label: 'Hispanic or Latino',
             data: data.ys2,
             fill: false,
             backgroundColor: '#105B65',
