--- a/templates/bargrouped13/index.html
+++ b/templates/bargrouped13/index.html
@@ -52,7 +52,7 @@
           barPercentage: .8
         },
         {
-          label: 'Hispanic or Latinx',
+          label: 'Hispanic or Latino',
           data: data.ys3,
           fill: false,
           backgroundColor: '#105B65',
