update chart titles

--- a/templates/bargrouped28/index.html
+++ b/templates/bargrouped28/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Average Salary of White and Non-White Employees by Education Level</title>
+  <title>Median Salary of White and Non-White Employees by Education Level</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -57,7 +57,7 @@
         cornerRadius: 20,
         title:{
           display: false,
-          text: 'Average Salary of White and Non-White Employees by Education Level'
+          text: 'Median Salary of White and Non-White Employees by Education Level'
         },
         scales: {
           yAxes: [{
@@ -87,7 +87,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Average Base Salary'
+              labelString: 'Median Base Salary'
             }
           }]
         },
