--- a/templates/bar39/index.html
+++ b/templates/bar39/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Employee Pay by Gender: Men</title>
+  <title>Employee Pay by Gender: Male</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -46,7 +46,7 @@
         cornerRadius: 20,
         title:{
           display: false,
-          text: 'Employee Pay by Gender: Men'
+          text: 'Employee Pay by Gender: Male'
         },
         scales: {
           xAxes: [{
@@ -62,7 +62,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Men: Base Salary ($)'
+              labelString: 'Male: Base Salary ($)'
             }
           }],
           yAxes: [{
@@ -79,7 +79,7 @@
             },
             scaleLabel: {
               display: false,
-              labelString: 'Percent of Total Employees that are Men'
+              labelString: 'Percent of Total Employees that are Male'
             }
           }]
         },
