--- a/templates/bar39/index.html
+++ b/templates/bar39/index.html
@@ -52,7 +52,7 @@
           xAxes: [{
             ticks: {
               callback: function(value, index, values) {
-                return value.toLocaleString('en-US');
+              return '$'+value.toLocaleString('en-US');
               },
               beginAtZero: true,
               //max: 7000,
