--- a/templates/bargrouped08/index.html
+++ b/templates/bargrouped08/index.html
@@ -30,7 +30,7 @@
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Men',
+          label: 'Male',
           data: data.ys2,
           fill: false,
           backgroundColor: '#23417D',
@@ -41,7 +41,7 @@
           barPercentage: .8
         },
         {
-          label: 'Women',
+          label: 'Female',
           data: data.ys,
           fill: false,
           backgroundColor: '#A83226',
