--- a/templates/bargrouped10/index.html
+++ b/templates/bargrouped10/index.html
@@ -89,7 +89,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Adjusted Average Cents on the Dollar Earned'
+              labelString: 'Adjusted Cents on the Dollar Earned'
             }
           }]
         },
