--- a/templates/bar50/index.html
+++ b/templates/bar50/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Film Permits by Month, 2018</title>
+        <title>Film Permits by Year, 2021</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="bar21" max-width="400" height="400"></canvas>
+<canvas id="bar51" max-width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -63,7 +63,7 @@ Chart.defaults.scale = {
 
 // Chart.defaults.global.defaultFontSize = 10
 
-var ctx = document.getElementById("bar21");
+var ctx = document.getElementById("bar51");
 
 var myChart = new Chart(ctx, {
     type: 'bar',
@@ -97,16 +97,16 @@ var myChart = new Chart(ctx, {
         },
         */
           {
-            label: 'Film Permits by Month, 2018',
+            label: 'Film Permits by Year',
             backgroundColor:"#2F56A6",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [6910,8958,9004]
+            data: [6910, 8094,7962,8958,8095,8222,9010,8441,2559,3465]
           }],
       labels: [
-            "2012","2015","2018"
+            "2012","2013","2014","2015","2016","2017","2018", "2019", "2020","2021 (Jan-Oct)"
       ]
     },
     options: {
