--- a/templates/bar51/index.html
+++ b/templates/bar51/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Film Permits by Year, 2021</title>
+        <title>Film Permits by Month, 2021</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="bar51" max-width="400" height="400"></canvas>
+<canvas id="bar20" max-width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -63,7 +63,7 @@ Chart.defaults.scale = {
 
 // Chart.defaults.global.defaultFontSize = 10
 
-var ctx = document.getElementById("bar51");
+var ctx = document.getElementById("bar20");
 
 var myChart = new Chart(ctx, {
     type: 'bar',
@@ -97,16 +97,16 @@ var myChart = new Chart(ctx, {
         },
         */
           {
-            label: 'Film Permits by Year',
-            backgroundColor:"#2F56A6",
+            label: 'Hours of Permitted Filming 2018',
+            backgroundColor:"#007534",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [6910, 8094,7962,8958,8095,8222,9010,8441,2559,3465]
+            data: [13922,5976,8910,9081,8022,6961,6776,6812]
           }],
       labels: [
-            "2012","2013","2014","2015","2016","2017","2018", "2019", "2020","2021 (Jan-Aug)"
+            "January","February","March","April","May","June","July","August","September","October","November","December"
       ]
     },
     options: {
@@ -123,7 +123,7 @@ var myChart = new Chart(ctx, {
           ticks: {
             beginAtZero: true,
             callback: function(value) {
-              return ''+value.toLocaleString('en-US')+' Permits';
+              return ''+value.toLocaleString('en-US')+' Hours';
             }
           }
         }]
@@ -131,7 +131,7 @@ var myChart = new Chart(ctx, {
       tooltips: {
         callbacks: {
           label: function(tooltipItem, data) {
-            return ''+ data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Permits';
+            return ''+ data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Hours';
           },
         }
       }
