--- a/templates/barhorizontal37/index.html
+++ b/templates/barhorizontal37/index.html
@@ -55,7 +55,7 @@
               },
               autoSkip: false,
               beginAtZero: true,
-              max: 55000,
+            //  max: 55000,
             },
             gridLines: {
               display: true
